# webmon

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml  python-app.yml  python-package.yml
src/webmon/: __main__.py  amain.py  db_inserter.py  service.py  web_pinger.py
tests/: test_amain.py  test_db_inserter.py  test_service.py  test_web_pinger.py
